# iispace

./: .bazelrc  .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  BUILD  CMakeLists.txt  GamepadConfig.vcproj  MANUAL.TXT  MODULE.bazel  Makefile  README.md  TODO.md  WORKSPACE  WiiScore.vcproj  WiiSpace.sln  WiiSpace.vcproj  WiiSpace2.vcproj  build.sh  clang.bazelrc  debug.sh  flamegraph.sh  format.sh  linuxcompile.sh  lookupgen.vcproj
.github/workflows/: build.yml
apps/WiiSPACE/: meta.xml
assets/: BUILD
assets/fonts/: BUILD
dependencies/: CMakeLists.txt  Makefile
dependencies/ois_1_3/: bootstrap
dependencies/ois_1_3/demos/: Makefile.am
dependencies/ois_1_3/src/linux/: LinuxJoyStickEvents.cpp
dependencies/sfml_1_6/include/SFML/System/: ResourcePtr.inl
dependencies/sfml_1_6/src/SFML/Window/Linux/: Joystick.cpp
game/: BUILD  ai_network_sim.cc  ai_replay_synth.cc  flags.h  iispace.cc  main.cc  main_score.cc  mode_flags.h  network_tools.h  replay.cc  replay_network_sim.cc  replay_synth.cc  replay_tools.h  score.cc  space.cc  version.h
game/common/: BUILD  async.h  collision.h  colour.h  easing.h  enum.h  fix32.cc  fix32.h  functional.h  math.h  printer.h  random.h  raw_ptr.h  rect.h  result.h  struct_tuple.h  type_list.h  ustring.cc  ustring.h  ustring_convert.h  variant_switch.h  z.cc  z.h
game/core/: BUILD  game_layers.cc  game_layers.h  game_options.h  game_stack.cc  game_stack.h  io_input_adapter.cc  io_input_adapter.h  lib.cc  lib.h  main.cc  main_score.cc  modal.cc  modal.h  render_state.cc  render_state.h  replay.cc  replay.h  save.cc  save.h  ui_layer.cc  ui_layer.h  z0_game.cc  z0_game.h
game/data/: BUILD  conditions.h  config.cc  config.h  config.proto  crypt.cc  crypt.h  input_frame.h  packet.cc  packet.h  proto_tools.h  replay.cc  replay.h  save.cc  save.h
game/geom2/: BUILD  enums.h  resolve.h  shape_bank.cc  shape_bank.h  shape_data.h  transform.h  types.h  value_parameters.h
game/geometry/: BUILD  concepts.h  enums.h  expressions.h  iteration.h  node.h  node_conditional.h  node_disable_iteration.h  node_for_each.h  node_transform.h  resolve.h  shape_bank.cc  shape_bank.h  shape_data.h  types.h  value_parameters.h
game/io/: BUILD  input.cc  input.h  io.h  null_io.cc  null_io.h  sdl_convert.h  sdl_example.cc  sdl_io.cc  sdl_io.h
game/logic/: BUILD  boss.cc  boss.h  enemy.cc  enemy.h  overmind.cc  overmind.h  player.cc  player.h  player_input.cc  player_input.h  shape.cc  shape.h  ship.cc  ship.h  sim_interface.cc  sim_interface.h  sim_internals.h  sim_state.cc  sim_state.h  stars.cc  stars.h
game/mixer/: BUILD  mixer.cc  mixer.h  sound.h
game/proto/: BUILD  iispace.proto
game/render/: BUILD  font_cache.cc  font_cache.h  gl_renderer.cc  gl_renderer.h  noise_generator.cc  noise_generator.h  null_renderer.h  prepare_text.cc  render_common.h  renderer.h  shader_compiler.cc  shader_compiler.h  target.h
game/system/: BUILD  default.h  steam.cc  steam.h  system.cc  system.h
game/tools/: BUILD  ai_network_sim.cc  ai_replay_synth.cc  conditions.h  network_tools.h  replay.cc  replay_network_sim.cc  replay_tools.h
game/util/: BUILD  gamepad.cc  gamepad.h  recrypt.cc
source/: GRRLIB.c  _BossAttack.h  _BossFire.h  _Console.h  _EnemyDestroy.h  _EnemyHit.h  _EnemyShatter.h  _EnemySpawn.h  _Explosion.h  _MenuAccept.h  _MenuClick.h  _PlayerDestroy.h  _PlayerFire.h  _PlayerRespawn.h  _PlayerShield.h  _PowerupLife.h  _PowerupOther.h  aliasing.cpp  boss.cpp  boss.h  bossenemy.cpp  bossenemy.h  enemy.cpp  enemy.h  fix32.h  game.cpp  game.h  gamepadcfg.cpp  gamepadcfg.h  lib.cpp  lib.h  librepscore.cpp  librepscore.h  libwii.cpp  libwii.h  libwiisave.cpp  libwin.cpp  libwin.h  lookupgen.cpp  overmind.cpp  (+16 more)
src/: BUILD  aliasing.cpp  boss.cpp  boss.h  boss_chaser.cc  boss_chaser.cpp  boss_chaser.h  boss_deathray.cpp  boss_deathray.h  boss_enemy.cpp  boss_enemy.h  boss_ghost.cc  boss_ghost.cpp  boss_ghost.h  boss_shield.cpp  boss_shield.h  boss_square.cc  boss_square.cpp  boss_square.h  boss_super.cc  boss_super.cpp  boss_super.h  boss_tractor.cpp  boss_tractor.h  enemy.cpp  enemy.h  fix32.cpp  fix32.h  game.cpp  game.h  iispace.proto  lib.cpp  lib.h  lib_ii.cpp  lib_ii.h  lib_score.cpp  lib_score.h  main.cc  main.cpp  modal.cc  (+28 more)
src/gamepad/: gamepad.cpp  gamepad.h
src/lookup/: lookup_gen.cpp
src/util/: BUILD  gamepad.cc  gamepad.cpp  gamepad.h  recrypt.cc  recrypt.cpp
test/: BUILD  ai_test.bzl  exe_test.bzl  network_sim_test.bzl  replay_test.bzl
test/ai/: BUILD
test/legacy/: BUILD
test/network_sim/: BUILD
test/replays/: 1p_hardmode_DARKBEEF_611100.wrp  1p_hardmode_HARDMAN_367210.wrp  BEEF_373295.wrp  BUILD  Darb_1p__Darb_216150.wrp  Darb_1p__Darb_235015.wrp  Darb_1p__Darb_272810.wrp  Darb_1p__Darb_280875.wrp  Darb_1p__Darb_365550.wrp  Darb_1p__Darb_398305.wrp  Darb_1p__Darb_426680.wrp  Darb_2p__GravesDarb_274744.wrp  Darb_2p__GravesDarb_313429.wrp  Darb_2p__Graves__Darb_553403.wrp  Darb_4p__Team_Graves_430987.wrp  DrakeGraves_1p__Graves_400670.wrp  DrakeGraves_1p__Graves_498305.wrp  Kornflakes_1p__Kornflakes_329865.wrp  PhasecoreX_1p__PhasecoreX_196595.wrp  STU_542570.wrp  Xazuki_1p__Tooty_McShooty_80830.wrp  ai_2p_normal_764373.wrp  blinn_1p__SRJables_135885.wrp  bossmode.wrp  inputswap_40750.wrp  seiken_1p__SEIKEN_419035.wrp  seiken_1p__STUde_tha_baddude_330115.wrp  seiken_1p__Take_This_Graves_555985.wrp  seiken_1p__crikey_641530.wrp  seiken_2p__BOOBS_437203.wrp  seiken_2p__RAB__STU_Yo_477833.wrp  seiken_2p__RabStu_321225.wrp  seiken_2p__STRAUB_259003.wrp  seiken_2p__Sucks_99645.wrp  (+1 more)
tests/: Darb_2p__Graves  Darb_553403.wrp  Darb_4p__Team Graves_430987.wrp  seiken_1p__crikey_641530.wrp  seiken_2p__RAB  STU Yo_477833.wrp  seiken_3p__3 OF US_219110.wrp
tools/: flamegraph.sh  http_archive_override.bzl  replay_diff.sh  sdl_system_repository.bzl  wc.sh  xxd.bzl
web/: index.php  php.ini  style.css  styleTHIN.css  styleWIDE.css  wiiconsole.eot
windows/: gamepad.vcxproj  iispace.sln  iispace.vcxproj  iispace.vcxproj.filters  lookup.vcxproj  recrypt.vcxproj  recrypt.vcxproj.filters  score.vcxproj  score.vcxproj.filters
(+383 files in other folders)
